# stm32-l552-sandbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  linker_script.ld  todo.md
.github/workflows/: actions.yml
cmake/: config.cmake  dependencies.cmake  freertos.cmake  include_list.cmake  source_list.cmake  stm32l5xx.cmake
doc/: pcb_motor_driver.drawio
ide/: stm32-l555-sandbox.code-workspace
inc/: FreeRTOSConfig.h  board.h
src/: error.h  main.c  syscalls.c
src/app/: app.c  app.h
src/app/direction_controller/: direction_controller.c  direction_controller.h
src/app/intensity_sensor/: intensity_sensor.c  intensity_sensor.h  intensity_sensor_config.h.in
src/app/motor_controller/: motor_controller.c  motor_controller.h
src/app/order_handler/: order_handler.c  order_handler.h  order_handler_config.h
src/app/speed_sensor/: speed_sensor.c  speed_sensor.h  speed_sensor_config.h.in
src/bsp/: bsp.c  bsp.h  cpu_delay.h
src/bsp/adc/: adc.c  adc.h  adc_config.h.in
src/bsp/clocks/: clocks.c  clocks.h
src/bsp/gpio/: gpio.c  gpio.h
src/bsp/interrupts/: interrupts.c  interrupts.h  interrupts_config.h
src/bsp/system/: system.c  system.h  system_config.h
src/bsp/timer_counter/: timer_counter.c  timer_counter.h  timer_counter_config.h.in
src/bsp/timer_pwm/: timer_pwm.c  timer_pwm.h
src/bsp/uart/: uart.c  uart.h  uart_config.h.in
src/bsp/watchdog/: watchdog.c  watchdog.h
src/tasks/: task_handler.c  task_handler.h
src/tasks/idle/: idle_task.c  idle_task.h
src/tasks/media/: media_task.c  media_task.h
src/tasks/motor/: motor_task.c  motor_task.h
src/tasks/supervisor/: supervisor_task.c  supervisor_task.h
src/tasks/watchdog/: wdog_task.c  wdog_task.h
src/utils/: reg_macro.h
src/utils/error/: error.c  error.h
src/utils/ring_buffer/: ring_buffer.c  ring_buffer.h  ring_buffer_config.h.in
